añadiendo tareas por hacer

--- a/notebooks/Laboratorio1.ipynb
+++ b/notebooks/Laboratorio1.ipynb
@@ -232,33 +232,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Queremos generar el data profiling de estos datos.\n",
-    "\n",
-    "* ¿Cuántas variables tenemos?\n",
-    "* ¿Cuántas observaciones tenemos?\n",
-    "* ¿Cuántas observaciones únicas tenemos por variable?\n",
-    "* ¿Cuántas variables numéricas tenemos?\n",
-    "* ¿Cuántas variables de fecha tenemos?\n",
-    "* ¿Cuántas variables categóricas tenemos?\n",
-    "* ¿Cuántas variables de texto tenemos?\n",
-    "* Generea el profiling de cada variable\n",
-    "* ¿Qué conocemos ahora de este set de datos por variable?\n",
-    "* ¿Cuántas alcadías tienes? ¿Cuántos nomgeo tienes? ¿Identificas algún error?\n",
-    "\n",
-    "* Transformar las variables a formato estándar: minúsculas, sin espacios en blanco, sin signos de puntuación.\n",
-    "* Agregar la variable latitud y longitud.\n",
-    "* Pasar la variable latitud y longitud a numérica -si no la tomó como numérica-.\n",
-    "* Eliminar la columna geo_point -una vez que creaste la variable latitud y longitud.\n",
-    "* Eliminar la columna geo_shape.\n",
-    "* Cambiar a minúsculas las columnas alcaldía, colonia e indice_des.\n",
-    "* Volver a correr el proceso de identificación de variables numéricas, categóricas, texto y fechas.\n",
-    "* Genera el data profiling por variable (puedes ocupar el paquete pandas-profiling de pandas)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### ¿Cuántas variables tenemos?"
    ]
   },
@@ -716,11 +689,39 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### ¿Cuántas variables de fecha tenemos?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ¿Cuántas variables categóricas tenemos?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ¿Cuántas variables de texto tenemos?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Genera el profiling de cada variable (propio)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Genera el profiling de cada variable (Pandas profiling)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -831,6 +832,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### ¿Qué conocemos ahora de este set de datos por variable?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Transformar las variables a formato estándar: minúsculas, sin espacios en blanco, sin signos de puntuación."
    ]
   },
@@ -863,6 +871,113 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Agregar la variable latitud y longitud."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Pasar la variable latitud y longitud a numérica -si no la tomó como numérica-."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Eliminar la columna geo_point -una vez que creaste la variable latitud y longitud."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Eliminar la columna geo_shape."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cambiar a minúsculas las columnas alcaldía, colonia e indice_des."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Volver a correr el proceso de identificación de variables numéricas, categóricas, texto y fechas."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Genera el data profiling por variable (puedes ocupar el paquete pandas-profiling de pandas)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Queremos generar el data profiling de estos datos.\n",
+    "\n",
+    "* Volver a correr el proceso de identificación de variables numéricas, categóricas, texto y fechas.\n",
+    "* Genera el data profiling por variable (puedes ocupar el paquete pandas-profiling de pandas)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Queremos generar el data profiling de estos datos.\n",
+    "\n",
+    "* ¿Cuántas variables tenemos?\n",
+    "* ¿Cuántas observaciones tenemos?\n",
+    "* ¿Cuántas observaciones únicas tenemos por variable?\n",
+    "* ¿Cuántas variables numéricas tenemos?\n",
+    "* ¿Cuántas variables de fecha tenemos?\n",
+    "* ¿Cuántas variables categóricas tenemos?\n",
+    "* ¿Cuántas variables de texto tenemos?\n",
+    "* Generea el profiling de cada variable\n",
+    "* ¿Qué conocemos ahora de este set de datos por variable?\n",
+    "* ¿Cuántas alcadías tienes? ¿Cuántos nomgeo tienes? ¿Identificas algún error?\n",
+    "\n",
+    "* Transformar las variables a formato estándar: minúsculas, sin espacios en blanco, sin signos de puntuación.\n",
+    "* Agregar la variable latitud y longitud.\n",
+    "* Pasar la variable latitud y longitud a numérica -si no la tomó como numérica-.\n",
+    "* Eliminar la columna geo_point -una vez que creaste la variable latitud y longitud.\n",
+    "* Eliminar la columna geo_shape.\n",
+    "* Cambiar a minúsculas las columnas alcaldía, colonia e indice_des.\n",
+    "* Volver a correr el proceso de identificación de variables numéricas, categóricas, texto y fechas.\n",
+    "* Genera el data profiling por variable (puedes ocupar el paquete pandas-profiling de pandas)"
+   ]
   }
  ],
  "metadata": {
