--- a/notebooks/Laboratorio1.ipynb
+++ b/notebooks/Laboratorio1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,212 +18,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "agua = pd.read_csv('data_labs/consumo-agua.csv')"
+    "agua = pd.read_csv('../data/consumo-agua.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Geo Point</th>\n",
-       "      <th>Geo Shape</th>\n",
-       "      <th>consumo_total_mixto</th>\n",
-       "      <th>anio</th>\n",
-       "      <th>nomgeo</th>\n",
-       "      <th>consumo_prom_dom</th>\n",
-       "      <th>consumo_total_dom</th>\n",
-       "      <th>alcaldia</th>\n",
-       "      <th>colonia</th>\n",
-       "      <th>consumo_prom_mixto</th>\n",
-       "      <th>consumo_total</th>\n",
-       "      <th>consumo_prom</th>\n",
-       "      <th>consumo_prom_no_dom</th>\n",
-       "      <th>bimestre</th>\n",
-       "      <th>consumo_total_no_dom</th>\n",
-       "      <th>gid</th>\n",
-       "      <th>indice_des</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>19.4552601937,-99.1126617526</td>\n",
-       "      <td>{\"type\": \"MultiPolygon\", \"coordinates\": [[[[-9...</td>\n",
-       "      <td>159.72</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>Gustavo A. Madero</td>\n",
-       "      <td>42.566364</td>\n",
-       "      <td>468.23</td>\n",
-       "      <td>GUSTAVO A. MADERO</td>\n",
-       "      <td>7 DE NOVIEMBRE</td>\n",
-       "      <td>53.24</td>\n",
-       "      <td>631.00</td>\n",
-       "      <td>42.066667</td>\n",
-       "      <td>3.05</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3.05</td>\n",
-       "      <td>57250</td>\n",
-       "      <td>ALTO</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>19.4552601937,-99.1126617526</td>\n",
-       "      <td>{\"type\": \"MultiPolygon\", \"coordinates\": [[[[-9...</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>Gustavo A. Madero</td>\n",
-       "      <td>35.936667</td>\n",
-       "      <td>107.81</td>\n",
-       "      <td>GUSTAVO A. MADERO</td>\n",
-       "      <td>7 DE NOVIEMBRE</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>115.13</td>\n",
-       "      <td>28.782500</td>\n",
-       "      <td>7.32</td>\n",
-       "      <td>3</td>\n",
-       "      <td>7.32</td>\n",
-       "      <td>57253</td>\n",
-       "      <td>MEDIO</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>19.4557195871,-99.1135822797</td>\n",
-       "      <td>{\"type\": \"MultiPolygon\", \"coordinates\": [[[[-9...</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>Gustavo A. Madero</td>\n",
-       "      <td>24.586000</td>\n",
-       "      <td>122.93</td>\n",
-       "      <td>GUSTAVO A. MADERO</td>\n",
-       "      <td>7 DE NOVIEMBRE</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>197.96</td>\n",
-       "      <td>32.993333</td>\n",
-       "      <td>75.03</td>\n",
-       "      <td>3</td>\n",
-       "      <td>75.03</td>\n",
-       "      <td>57255</td>\n",
-       "      <td>POPULAR</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>19.4596467168,-99.1044693641</td>\n",
-       "      <td>{\"type\": \"MultiPolygon\", \"coordinates\": [[[[-9...</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>Gustavo A. Madero</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>GUSTAVO A. MADERO</td>\n",
-       "      <td>NUEVA TENOCHTITLAN</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>253.53</td>\n",
-       "      <td>84.510000</td>\n",
-       "      <td>84.51</td>\n",
-       "      <td>3</td>\n",
-       "      <td>253.53</td>\n",
-       "      <td>57267</td>\n",
-       "      <td>BAJO</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>19.4741606185,-99.1467497317</td>\n",
-       "      <td>{\"type\": \"MultiPolygon\", \"coordinates\": [[[[-9...</td>\n",
-       "      <td>56.72</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>Azcapotzalco</td>\n",
-       "      <td>67.436250</td>\n",
-       "      <td>539.49</td>\n",
-       "      <td>AZCAPOTZALCO</td>\n",
-       "      <td>PROHOGAR</td>\n",
-       "      <td>56.72</td>\n",
-       "      <td>839.35</td>\n",
-       "      <td>76.304545</td>\n",
-       "      <td>121.57</td>\n",
-       "      <td>3</td>\n",
-       "      <td>243.14</td>\n",
-       "      <td>57330</td>\n",
-       "      <td>BAJO</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                      Geo Point  \\\n",
-       "0  19.4552601937,-99.1126617526   \n",
-       "1  19.4552601937,-99.1126617526   \n",
-       "2  19.4557195871,-99.1135822797   \n",
-       "3  19.4596467168,-99.1044693641   \n",
-       "4  19.4741606185,-99.1467497317   \n",
-       "\n",
-       "                                           Geo Shape  consumo_total_mixto  \\\n",
-       "0  {\"type\": \"MultiPolygon\", \"coordinates\": [[[[-9...               159.72   \n",
-       "1  {\"type\": \"MultiPolygon\", \"coordinates\": [[[[-9...                 0.00   \n",
-       "2  {\"type\": \"MultiPolygon\", \"coordinates\": [[[[-9...                 0.00   \n",
-       "3  {\"type\": \"MultiPolygon\", \"coordinates\": [[[[-9...                 0.00   \n",
-       "4  {\"type\": \"MultiPolygon\", \"coordinates\": [[[[-9...                56.72   \n",
-       "\n",
-       "   anio             nomgeo  consumo_prom_dom  consumo_total_dom  \\\n",
-       "0  2019  Gustavo A. Madero         42.566364             468.23   \n",
-       "1  2019  Gustavo A. Madero         35.936667             107.81   \n",
-       "2  2019  Gustavo A. Madero         24.586000             122.93   \n",
-       "3  2019  Gustavo A. Madero          0.000000               0.00   \n",
-       "4  2019       Azcapotzalco         67.436250             539.49   \n",
-       "\n",
-       "            alcaldia             colonia  consumo_prom_mixto  consumo_total  \\\n",
-       "0  GUSTAVO A. MADERO      7 DE NOVIEMBRE               53.24         631.00   \n",
-       "1  GUSTAVO A. MADERO      7 DE NOVIEMBRE                0.00         115.13   \n",
-       "2  GUSTAVO A. MADERO      7 DE NOVIEMBRE                0.00         197.96   \n",
-       "3  GUSTAVO A. MADERO  NUEVA TENOCHTITLAN                0.00         253.53   \n",
-       "4       AZCAPOTZALCO            PROHOGAR               56.72         839.35   \n",
-       "\n",
-       "   consumo_prom  consumo_prom_no_dom  bimestre  consumo_total_no_dom    gid  \\\n",
-       "0     42.066667                 3.05         3                  3.05  57250   \n",
-       "1     28.782500                 7.32         3                  7.32  57253   \n",
-       "2     32.993333                75.03         3                 75.03  57255   \n",
-       "3     84.510000                84.51         3                253.53  57267   \n",
-       "4     76.304545               121.57         3                243.14  57330   \n",
-       "\n",
-       "  indice_des  \n",
-       "0       ALTO  \n",
-       "1      MEDIO  \n",
-       "2    POPULAR  \n",
-       "3       BAJO  \n",
-       "4       BAJO  "
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "agua.head()"
    ]
@@ -237,20 +43,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "17"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "len(agua.columns)"
    ]
@@ -557,97 +352,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tipo    object\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "vars_type.dtypes"
+    "#vars_type.dtypes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Geo Point              NaN\n",
-       "Geo Shape              NaN\n",
-       "consumo_total_mixto    NaN\n",
-       "anio                   NaN\n",
-       "nomgeo                 NaN\n",
-       "consumo_prom_dom       NaN\n",
-       "consumo_total_dom      NaN\n",
-       "alcaldia               NaN\n",
-       "colonia                NaN\n",
-       "consumo_prom_mixto     NaN\n",
-       "consumo_total          NaN\n",
-       "consumo_prom           NaN\n",
-       "consumo_prom_no_dom    NaN\n",
-       "bimestre               NaN\n",
-       "consumo_total_no_dom   NaN\n",
-       "gid                    NaN\n",
-       "indice_des             NaN\n",
-       "Name: tipo, dtype: float64"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "vars_type['tipo'].str.count('int64')"
+    "#vars_type['tipo'].str.count('int64')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Geo Point                object\n",
-       "Geo Shape                object\n",
-       "consumo_total_mixto     float64\n",
-       "anio                      int64\n",
-       "nomgeo                   object\n",
-       "consumo_prom_dom        float64\n",
-       "consumo_total_dom       float64\n",
-       "alcaldia                 object\n",
-       "colonia                  object\n",
-       "consumo_prom_mixto      float64\n",
-       "consumo_total           float64\n",
-       "consumo_prom            float64\n",
-       "consumo_prom_no_dom     float64\n",
-       "bimestre                  int64\n",
-       "consumo_total_no_dom    float64\n",
-       "gid                       int64\n",
-       "indice_des               object\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "agua.dtypes"
+    "#agua.dtypes"
    ]
   },
   {
