comentario de correlacion

--- a/notebooks/Laboratorio_limpio-Copy1.ipynb
+++ b/notebooks/Laboratorio_limpio-Copy1.ipynb
@@ -5860,6 +5860,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "La mayoría de las correlaciones están cercanas al cero, por lo que no resultan muy importantes."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Gráficas de las distribuciones en los datos"
    ]
   },
@@ -6094,7 +6101,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nota: Gráfica limitada a 2,000 m^3 en el eje x y 1,000 en el conteo (eje y)\n",
+      "para poder observar de mejor forma la distribución de los datos\n"
+     ]
+    }
+   ],
    "source": [
     "g = sns.displot(data=agua,x='consumo_prom',hue='indice_des',col='indice_des', rug=True)\n",
     "plt.ylim(0,1000)\n",
